--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     },
     "packageManager": "pnpm@9.7.0",
     "dependencies": {
+        "@swisstype/essential": "^0.1.2",
+        "ethers": "^6.13.5",
         "xrpl": "4.0.0"
     }
 }
