--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,5 +7,6 @@
         "declaration": true,
         "removeComments": true,
         "sourceMap": true
-    }
+    },
+    "exclude": ["test", "dist"]
 }
