--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "peerDependencies": {
         "ethers": "^6.13.5",
         "xrpl": "4.0.0"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
